Revert "And corrected bullet point alignment for small screens"
This reverts commit 27021c34c2ff63e86db7b14bc475a74a864143f1.

--- a/css/styles.css
+++ b/css/styles.css
@@ -189,7 +189,7 @@ footer
         content: "\1D121\00A0\00A0\00A0";
         font-family: "Bravura";
         font-size: 1rem;
-        vertical-align: middle;
+        vertical-align: text-top;
     }
 
     homepagenavigationitem
